# bevy_survivors

./: Cargo.toml  LICENSE  README.md  backlog.txt  run.bat
src/: ai.rs  assets.rs  constants.rs  main copy.rs
src copy/: main.rs
src/components/: mod.rs
